--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <i class="fas fa-arrow-left"></i> Kembali
     </button>
     <div class="product-container">
-        <img src="bluemosque2.jpg" alt="Nama Produk">
+        <img src="bluemosque2.JPG" alt="Nama Produk">
         <h2>bluemosque</h2>
         <p>Harga: 400.000/meter</p>
         <a href="https://api.whatsapp.com/send?phone=6289512595271" class="button">Beli Sekarang</a>
